--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               alt="user image"
               class="user-nav__user-photo"
             />
-            <span class="usaer-nav__user-name">Jitesh</span>
+            <span class="usaer-nav__user-name">Jitesh Gadage</span>
           </div>
         </div>
       </header>
